# blokus_elemental

./: 1_multiplayer_backend_design.md  Cargo.toml  Readme.md
configuration/: base.toml  base.yaml  local.toml  local.yaml
docs/: unorganized_doc.md
docs/1_multiplayer/: 1_1_multiplayer_overview.md  1_2_messaging.md
docs/7_web3/: 7_web3.md
http/: api.http
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/game/: board.rs  piece.rs  player.rs
test/: lib.rs
tests/api/: helpers.rs  http_and_websocket.rs  main.rs
