[package]
name = "blokus_elemental"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "blokust_elemental"

[dependencies]
actix-web = "4.8"
actix-ws = "0.3"
actix-test = "0.1"
config = { version = "0.14", default-features = false, features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.5"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync", "io-util"]}
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
once_cell = "1.20.1"
uuid = { version = "1.10.0", features = ["v4"] }
reqwest = "0.12.8"
serde_json = "1.0.128"
wiremock = "0.6"

